# music-cover-fetcher

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  music_cover_fetcher.py  pyproject.toml  run.bat  setup.bat
.github/workflows/: ci.yml
