[project]
name = "music-cover-fetcher"
version = "0.1.0"
description = "Fetch and embed album cover art for music files using iTunes Search API"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "requests>=2.28.0",
    "mediafile>=0.12.0",
]

[project.scripts]
music-cover-fetcher = "music_cover_fetcher:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
