[project]
name = "music-cover-fetcher"
version = "0.2.0"
description = "Auto-tag your music library with cover art, album, genre, year and more from Deezer, iTunes & MusicBrainz"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = [
    "music", "metadata", "tagger", "cover-art", "id3",
    "deezer", "itunes", "musicbrainz", "mp3", "flac",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
    "requests>=2.28.0",
    "mediafile>=0.12.0",
]

[project.scripts]
music-cover-fetcher = "music_cover_fetcher:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
